--- a/src/scss/components/_bio.scss
+++ b/src/scss/components/_bio.scss
@@ -16,6 +16,7 @@
             position: absolute;
             left: -6rem;
             top: -3rem;
+            border: 1px solid $primary-color;
         }
 
         &:first-of-type {
